--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="mask-icon" href="assets/favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <meta name="twitter:image:src" content="assets/logo-import.png" />
+    <meta name="description" content="O Metralha Lanche irá lhe entregar um dos melhores e mais suculentos lanches de Manaus. Venha experimentar">
 </head>
 
 <body>
