--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h1>Metralha Lanche</h1>
             </div>
             <div class="logo">
-                <img src="/assets/logo-import.png" alt="">
+                <img src="assets/logo-import.png" alt="">
             </div>
         </div>
         <div class="footer" id="footer">
